# thing-craft

./: .gitignore  AGENTS.md  BOOSTRAP_COMPLETION.md  CLAUDE.md  COMPLETION.md  Cargo.toml  GAMEPLAY_COMPLETION.md  README.md  ROADMAP.md  WHAT.md  new-worktree.bat  package.bat  package_collect.ps1
.codex/environments/: environment.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  REFERENCES.md
docs/reports/: lighting_rendering_parity_report.md  liquid_system_comparison_report.md  performance_iteration.md  performance_optimization_report.md  render_pipeline_comparison_report.md  worldgen_parity_report.md
resources/decomp/src/: summary.txt
resources/decomp/src/com/jcraft/jogg/: Buffer.java  Packet.java  Page.java  StreamState.java  SyncState.java
resources/decomp/src/com/jcraft/jorbis/: Block.java  CodeBook.java  (+24 more)
resources/decomp/src/paulscode/sound/: Channel.java  CommandObject.java  CommandThread.java  FilenameURL.java  ICodec.java  Library.java  ListenerData.java  MidiChannel.java  SimpleThread.java  SoundBuffer.java  SoundSystem.java  SoundSystemConfig.java  SoundSystemException.java  SoundSystemLogger.java  Source.java  StreamThread.java  Vector3D.java
resources/minecraft-a1.2.6-client/title/: splashes.txt
scripts/: run_bench.ps1  summarize_bench.ps1
thingcraft-client/: Cargo.toml
thingcraft-client/src/: app.rs  crafting.rs  ecs.rs  entity.rs  gameplay.rs  hud.rs  inventory.rs  lighting.rs  main.rs  mesh.rs  noise.rs  renderer.rs  streaming.rs  time_step.rs  tool.rs  world.rs
thingcraft-client/src/app/: bench.rs  block_interaction.rs
(+424 files in other folders)
