[package]
name = "thingcraft-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
bevy_ecs = "0.15"
bytemuck = { version = "1.25", features = ["derive"] }
glam = "0.29"
pollster = "0.3"
noise = "0.9"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wgpu = "0.20"
winit = "0.29"
