[package]
name = "thingcraft-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
tracy = ["dep:tracing-tracy"]

[dependencies]
anyhow = "1.0"
bevy_ecs = "0.15"
bytemuck = { version = "1.25", features = ["derive"] }
glam = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.3"
noise = "0.9"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-tracy = { version = "0.11", optional = true }
wgpu = "0.20"
winit = "0.29"
